--- a/assets/admin/css/custom.css
+++ b/assets/admin/css/custom.css
@@ -41,7 +41,13 @@ button {
 }
 .content-form-field {
 	background: #fff;
-	padding: 10px;
+	/*padding: 10px;*/
+    float: left;
+    width: 100%;
+}
+.tabs{
+    float: left;
+    width: 100%;
 }
 .form-control{
 	margin-top:10px;
@@ -67,6 +73,7 @@ button {
 	border: 1px solid #ccc;
 	float: left;
 	margin: 3px;
+    cursor: move;
 }
 .gallery_list li .image {
 	float: left
